Use env vars for DB config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
+# spring.application.name=TravelWith
+
+# spring.datasource.url = jdbc:mysql://127.0.0.1:3306/travelWith
+# spring.datasource.username =root
+# spring.datasource.password =Naveen@1234
+# spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+# spring.jpa.hibernate.ddl-auto = update
+# #ddl stands for data definition language here.
+# spring.jpa.show-sql = true
+
+
 spring.application.name=TravelWith
 
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/travelWith
-spring.datasource.username =root
-spring.datasource.password =Naveen@1234
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+# Read DB config from env vars (Render will provide values).
+# Default here is for local dev; do NOT commit real passwords.
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://127.0.0.1:3306/travelWith?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto = update
-#ddl stands for data definition language here.
-spring.jpa.show-sql = true
-
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=true
