Add Dockerfile for Render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,3 @@
-# spring.application.name=TravelWith
-
-# spring.datasource.url = jdbc:mysql://127.0.0.1:3306/travelWith
-# spring.datasource.username =root
-# spring.datasource.password =Naveen@1234
-# spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-
-# spring.jpa.hibernate.ddl-auto = update
-# #ddl stands for data definition language here.
-# spring.jpa.show-sql = true
-
-
 spring.application.name=TravelWith
 
 # Read DB config from env vars (Render will provide values).
@@ -21,3 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
 spring.jpa.show-sql=true
+
+# Bind to Render's PORT env var in production, default 8080 locally
+server.port=${PORT:8080}
